<resources>
    <string name="text_app_name">SuperM</string>
    <string name="text_settings">Settings</string>
    <string name="text_username">账\t号(手机号)</string>
    <string name="text_password">密\t码</string>
    <string name="text_telephone_number">手机号码</string>
    <string name="text_register_number">注册号码</string>
    <string name="text_comfirm_password">确认密码</string>
    <string name="text_input_password">输入密码</string>
    <string name="text_logout">注销</string>
    <string name="text_login">登陆</string>

    <string name="action_open">打开</string>
    <string name="action_close">关闭</string>
    <string name="action_login">登\t\t\t\t\t陆</string>
    <string name="action_register">注\t\t\t\t\t册</string>
    <string name="action_reload">重新加载</string>
    <string name="action_goto_setting">打开设置</string>
    <string name="action_reconnect_to_internet">重新连接到网络</string>
    <string name="action_add_to_shopping_chart">加入购物车</string>
    <string name="action_version_update">版本升级</string>
    <string name="action_ask_later">以后再说</string>
    <string name="action_get_register_number">获取注册码</string>
    <string name="action_do_download">下载</string>

    <string name="msg_connectivityChanged">网络连接changed</string>
    <string name="msg_networkNotAvail">无法连接到网络</string>
    <string name="msg_update_version">版本升级</string>
    <string name="msg_register_succuess">注册成功</string>
    <string name="msg_unlogined">未登陆</string>
    <string name="msg_login_success">登陆成功</string>
    <string name="msg_update_message">fix some crash bug</string>

    <string name="hint_please_input_login_password">请输入密码</string>
    <string name="hint_please_input_password">仅可为字母或数字,最大长度为10</string>
    <string name="hint_please_input_confirm_password">请输入确认密码</string>
    <string name="hint_please_input_register_number">长度为6的数字</string>
    <string name="hint_please_input_username">请输入账号(手机号)</string>

    <string name="error_password_cannot_be_empty">密码不能为空</string>
    <string name="error_comfirm_password_cannot_empty">确认密码不能为空</string>
    <string name="error_password_comfirm_error">两次密码输入不一致</string>
    <string name="error_telephone_number_length_error">手机号码长度非法</string>
    <string name="error_user_mobile_phonenumber_taken">手机号已经存在</string>
    <string name="error_invalid_sms_code">短信注册码错误，请重新获取注册码</string>
    <string name="error_username_could_not_be_empty">用户名不能为空</string>
    <string name="error_password_could_not_be_empty">密码不能为空</string>
    <string name="error_username_and_password_mismatch">账号和密码不符</string>
    <string name="error_this_telephone_is_not_registered">该手机号未注册</string>
    <string name="error_phonenumer_is_not_verified">该手机号未通过验证</string>
    <string name="error_no_external_storage">没有SDCard，不支持下载更新</string>
    <string name="error_no_usable_storage">没有可用的存储介质</string>

    <string name="policy_login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>






</resources>
