<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:andorid="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        andorid:id="@+id/login_toolbar"
        />

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/tv_login_username"
            style="@style/CustomTextView"
            android:gravity="center_vertical"
            android:text="@string/text_username"
            app:layout_heightPercent="5%"
            app:layout_marginBottomPercent="1%"
            app:layout_marginLeftPercent="10%"
            app:layout_marginTopPercent="4%"
            app:layout_widthPercent="100%"
            />

        <com.mooreliu.view.ClearableEditText
            android:id="@+id/clearable_edit_text_login_username"
            style="@style/CustomEditText"
            android:layout_below="@id/tv_login_username"
            android:hint="@string/hint_please_input_username"
            android:numeric="integer"
            app:layout_heightPercent="10%"
            app:layout_marginBottomPercent="1%"
            app:layout_marginLeftPercent="10%"
            app:layout_marginRightPercent="10%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="100%"
            />

        <TextView
            android:id="@+id/text_view_login_password"
            style="@style/CustomTextView"
            android:layout_below="@id/clearable_edit_text_login_username"
            android:text="@string/text_password"
            app:layout_heightPercent="5%"
            app:layout_marginBottomPercent="1%"
            app:layout_marginLeftPercent="10%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="100%"

            />

        <com.mooreliu.view.ClearableEditText
            android:id="@+id/clearable_edit_text_login_password"
            style="@style/CustomEditText"
            android:layout_below="@id/text_view_login_password"
            android:digits="@string/policy_login_only_can_input"
            android:hint="@string/hint_please_input_login_password"
            android:password="true"
            app:layout_heightPercent="10%"
            app:layout_marginBottomPercent="1%"
            app:layout_marginLeftPercent="10%"
            app:layout_marginRightPercent="10%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="100%"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/clearable_edit_text_login_password"
            android:background="@drawable/drawable_loginbutton"
            android:text="@string/action_login"
            android:textSize="16sp"
            app:layout_heightPercent="8%"
            app:layout_marginBottomPercent="1%"
            app:layout_marginLeftPercent="10%"
            app:layout_marginRightPercent="10%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="80%"
            />

        <TextView
            android:id="@+id/text_view_login_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:textColor="@android:color/holo_red_dark"
            app:layout_heightPercent="4%"
            app:layout_marginBottomPercent="1%"
            app:layout_marginLeftPercent="10%"
            app:layout_marginRightPercent="10%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="80%"

            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_login_error_msg"
            android:background="@drawable/drawable_registerbutton"
            android:text="@string/action_register"
            android:textSize="16sp"
            app:layout_heightPercent="8%"
            app:layout_marginBottomPercent="1%"
            app:layout_marginLeftPercent="10%"
            app:layout_marginRightPercent="10%"
            app:layout_marginTopPercent="1%"
            app:layout_widthPercent="80%"
            />

    </android.support.percent.PercentRelativeLayout>
</LinearLayout>